full refactor for monorepo and observability